syntax = "proto3";
option java_multiple_files = true;
package report;

message SendReportRequest {
  int32 userid = 1;
  int32 postid = 2;
}

message RejectReportRequest {

  int32 reportid = 1;
}

message GetReportsRequest {}

message SendReportEmptyResponse {}

message GetReportsResponse {
  string list = 1;
}





service ReportService {
  rpc SendReport (SendReportRequest) returns (SendReportEmptyResponse) {}
  rpc GetReports (GetReportsRequest) returns (GetReportsResponse) {}
  rpc RejectReport (RejectReportRequest) returns (SendReportEmptyResponse) {}
}
